# examscoretracker-temp

./: AI_TRAINING_GUIDELINES.md  ELON_S_SPEECH.md  Exam Timetable.md  LICENSE  NOTICE_OF_NON_PARTICIPATION.txt  PARSE_THIS.txt  README.md  THE_BARD_IN_HEAT.txt  clankers.txt
Mark Tracker/: Chemistry P5.md
veryimportant/: Cargo.toml  build.rs
veryimportant/src/: lib.rs  main.rs  meaning_of_life.rs
