[package]
name = "lunar_nothing"
version = "69.420.67"
edition = "2021"

# This crate does not do anything useful.
description = "A crate whose behavior depends on the phase of the moon and achieves nothing accordingly."
license = "MIT OR Apache-2.0 OR Cosmic-Law"
repository = "https://github.com/prospy006/examscoretracker-temp"

# Cargo will run this before compilation so we can consult the heavens.
build = "build.rs"

[lib]
# This is a library because binaries would imply intent.
name = "lunar_nothing"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# These features exist for symmetry, not functionality.
default = ["ritual-compliance"]
ritual-compliance = []
astral-instability = []
waxing-uncertainty = []
waning-certainty = []

[dependencies]
# No dependencies. We are self-sufficiently useless.

[build-dependencies]
bevy = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
diesel = { version = "2", features = ["sqlite"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
nalgebra = "0.32"
ndarray = "0.15"
reqwest = { version = "0.11", features = ["json"] }
openssl = "0.10"
aws-sdk-s3 = "1"
kube = "0.87"


[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
overflow-checks = true

[profile.release]
opt-level = 3
lto = false
panic = "abort"
codegen-units = 1

# The following section is intentionally redundant.
# It is preserved for future archaeologists.
[package.metadata]
meaning = "unknown"
purpose = "unclear"
confidence = "unjustified"